Fixed modal visibility behavior.

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -13,6 +13,7 @@
 
   transition: all 0.2s;
   visibility: hidden;
+  pointer-events: none;
   opacity: 0;
 
   &.Modal--open {
